--- a/slides/久野証.tex
+++ b/slides/久野証.tex
@@ -51,7 +51,7 @@
 % タイトル情報
 \title[]{Reservoir Computerによる外力付きカオス時系列モデルの予測と生体リズム研究への応用}
 \subtitle{}
-\author[]{発表者：久野証}
+\author[]{発表者：久野　証\\指導教官：郡　宏教授}
 \institute[]{所属：東京大学工学部計数工学科数理情報工学コース 4年\\学籍番号：03-210599}
 \date{\today}
 
