何が何だか

--- a/slides/input/experiments.tex
+++ b/slides/input/experiments.tex
@@ -98,6 +98,7 @@
 
 \section{結果}
 \begin{frame}{self-evolve 期間における予測結果：位相シフトが$8, 10$のとき}
+  \red{せめて緑が誤差であることを言うべき}
   \begin{columns}[T] % [T] は列を上部で揃えるオプション
     \begin{column}{.5\textwidth}
       \begin{figure}
