--- a/slides/input/motivation.tex
+++ b/slides/input/motivation.tex
@@ -1,9 +1,9 @@
 \section{背景}
-\begin{frame}{LD Cycleによる生体リズムの研究}
+\begin{frame}{LD Cycleによる生体リズムの研究\red{technical}}
         \begin{block}{概日リズムの研究：LD Cycle}
           \begin{itemize}
             \item 時差ぼけやシフトワークは、生活習慣病のリスクを高める．
-            \item LD Cycleは生体リズムのモデルに用いられ，光と暗闇の情報が外力として系に加わる．\begin{itemize}
+            \item LD Cycleは生体リズムのモデルに用いられ\red{おかしい}，光と暗闇の情報が外力として系に加わる．\begin{itemize}
               \item 時差ぼけ/シフトワークの研究では，この外力の位相をシフトさせることを考える．
             \end{itemize}
             \item 外力や各パラメータの設定により周期的・カオス的な振る舞いを持つ．
@@ -41,6 +41,8 @@
       \end{column}
 
       \begin{column}{.5\textwidth}
+        \red{fbがないのに}
+
         \begin{figure}
             \includegraphics[width=\textwidth]{Fig/esn.svg.png}
         \end{figure}  
