stats almost done.

--- a/mywork/program/発展/self_evolv_stats.ipynb
+++ b/mywork/program/発展/self_evolv_stats.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
-      "Wall time: 4.05 µs\n"
+      "CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 µs\n",
+      "Wall time: 2.86 µs\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,34 @@
       "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.47955e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
       "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.57288e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.47396e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.42853e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.57696e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.57201e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.5258e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.45327e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.42778e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.48389e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.43814e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.5037e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.46537e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.28562e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.45418e-17): result may not be accurate.\n",
+      "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n",
+      "/Users/manqueenmannequin/miniforge3/envs/python38gen2/lib/python3.8/site-packages/reservoirpy/nodes/readouts/ridge.py:17: LinAlgWarning: Ill-conditioned matrix (rcond=1.5635e-17): result may not be accurate.\n",
       "  return linalg.solve(XXT + ridge, YXT.T, assume_a=\"sym\")\n"
      ]
     }
@@ -295,7 +323,7 @@
     "    file_name_1 = f\"{dir_name_1}/CmaEs_shift{i}.csv\"\n",
     "\n",
     "    # X_tをCSVファイルに書き出す\n",
-    "    np.savetxt(file_name_1, X_gen, delimiter=',')\n",
+    "    np.savetxt(file_name_1, X_t, delimiter=',')\n",
     "\n",
     "    # X_tを適当なファイル名で保存する場合\n",
     "    file_name_2 = f\"{dir_name_2}/CmaEs_shift{i}.csv\"\n",
@@ -321,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
