--- a/main.tex
+++ b/main.tex
@@ -95,12 +95,12 @@
 \clearpage}
 
 \mainmatter% ここから本文 %%% 本文 %%%%%%%%
-% \subfile{chapters/notation.tex}
-% \subfile{chapters/intro.tex}
-% \subfile{chapters/prev.tex}
+\subfile{chapters/notation.tex}
+\subfile{chapters/intro.tex}
+\subfile{chapters/prev.tex}
 \subfile{chapters/method-3body.tex}
-% \subfile{chapters/method-percolation.tex}
-% \subfile{chapters/summary.tex}
+\subfile{chapters/method-percolation.tex}
+\subfile{chapters/summary.tex}
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 指導教員である郡宏教授には，研究のテーマ設定から論文の執筆まで大変熱心に御指導頂きました．
@@ -117,5 +117,5 @@
 \bibliography{reference.bib}% BibTeX を使う場合
 
 \appendix% ここから付録 %%%%% 付録 %%%%%%%
-% \subfile{chapters/appendix.tex}
+\subfile{chapters/appendix.tex}
 \end{document}
