頼むぜ田中．

--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,7 @@
 
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
   頼むぜ田中．
+  頼むぜ田中．
   
   同期現象はホタルの明滅や神経細胞・心筋細胞の電気活動など自然界で広く見られ，また，電力網などの工学系でも見られる．
   また，同期現象の数理モデルが進歩する一方でネットワーク科学が発展し，接続次数などのネットワークの構造と同期・拡散などの動的なプロセスとの関係が盛んに調べられている．  
