頼むぜ田中．

--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@
 
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
   頼むぜ田中．
-  頼むぜ田中．
+  頼むぜ田中．頼むぜ田中．
   やったぜ田中．
   
   同期現象はホタルの明滅や神経細胞・心筋細胞の電気活動など自然界で広く見られ，また，電力網などの工学系でも見られる．
