--- a/mywork/program/発展/plot_data.ipynb
+++ b/mywork/program/発展/plot_data.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# レスラー方程式(ランダムなシフト付きsin外力のある状態)\n",
+    "# VDP方程式(ランダムなシフト付きsin外力のある状態)\n",
     "\n",
-    "レスラー方程式の外力のある場合に関して，$\\sin$ 波に位相のランダムなシフトがある場合を考える．"
+    "VDP方程式の外力のある場合に関して，$\\sin$ 波に位相のランダムなシフトがある場合を考える．"
    ]
   },
   {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
