--- a/sotsuron/skeleton.tex
+++ b/sotsuron/skeleton.tex
@@ -1,27 +1,17 @@
 \documentclass[uplatex]{suribt}
-
-
-\usepackage{algorithmic}
-\usepackage{algorithm}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage[legacycolonsymbols]{mathtools}
-\usepackage{amsthm}
-
-\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=blue]{hyperref}
-
-
 %\documentclass[oneside]{suribt}% 本文が * ページ以下のときに (掲示に注意)
-\title{Reservoir Computer によるカオス時系列予測と生体リズム研究への応用}
+
+\usepackage{hyperref}
+
+\title{Reservoir Computer による\\カオス時系列予測と\\生体リズム研究への応用}
 %\titlewidth{}% タイトル幅 (指定するときは単位つきで)
-\author{久野証}
+\author{久野　証}
 \eauthor{Sho Kuno}% Copyright 表示で使われる
-\studentid{03-210622}
+\studentid{03-210599}
 \supervisor{郡 宏 教授}% 1 つ引数をとる (役職まで含めて書く)
 %\supervisor{指導教員名 役職 \and 指導教員名 役職}% 複数教員の場合，\and でつなげる
-\handin{2024}{02}% 提出月. 2 つ (年, 月) 引数をとる
+\handin{2024}{2}% 提出月. 2 つ (年, 月) 引数をとる
 %\keywords{キーワード1, キーワード2} % 概要の下に表示される
-
 
 
 \begin{document}
@@ -29,47 +19,31 @@
 
 \frontmatter% ここから前文
 \begin{abstract}%%%%%%%%%%%%% 概要 %%%%%%%%
+ ここに概要を書く．
 \end{abstract}
 
 \tableofcontents%%%%%%%%%%%%% 目次 %%%%%%%%
 
 \mainmatter% ここから本文 %%% 本文 %%%%%%%%
-\chapter{はじめに}
-そうしよう
 
-\section{本研究の位置付け}
-\section{本研究の内容}
+\input{input/introduction.tex}
+\input{input/preliminaries.tex}
 
-\section{本論文の構成}
+\input{input/methods.tex}
 
-\section{記法の準備}
+\input{input/results.tex}
 
-\chapter{準備}
+\input{input/discussion.tex}
 
-
-
-
-
-
-\section{多様体}
-
-\section{時間反転対称性}
-
-
-\chapter{提案手法}
 \cite{RODRIGUES20161}
 
-\chapter{数値実験}
-
-\chapter{まとめと今後の課題}
 \backmatter% ここから後付
 \chapter{謝辞}%%%%%%%%%%%%%%% 謝辞 %%%%%%%
 
 %\begin{thebibliography}{}%%%% 参考文献 %%%
 % \bibitem{}
 %\end{thebibliography}
-
-\bibliographystyle{junsrt}%           BibTeX を使う場合
+\bibliographystyle{unsrt}%           BibTeX を使う場合
 \bibliography{reference.bib}% BibTeX を使う場合
 
 \appendix% ここから付録 %%%%% 付録 %%%%%%%
