--- a/sotsuron/input/preliminaries.tex
+++ b/sotsuron/input/preliminaries.tex
@@ -8,8 +8,12 @@
     \frac{d^2 x}{d t^2}-\mu\left(1-x^2\right) \frac{d x}{d t}+x=0
 \end{align}
 
+
+
 \subsection{Rössler モデル}
+\clearpage
 \section{Reservoir Computer}
+\clearpage
 \section{先行研究}
 
 \clearpage
